injecting projects and skills by consuming api, htaccess and fixing body horizontal scroll

--- a/sass/_general.scss
+++ b/sass/_general.scss
@@ -4,6 +4,7 @@ html, body {
 
 body {
     transition: $transition;
+    overflow-x: hidden; //because of rotations in skills section them generated horizontal scroll
 }
 
 a {
